--- a/Syntax-Analysis/Syntax-Analysis.vcxproj.filters
+++ b/Syntax-Analysis/Syntax-Analysis.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="syntax_c_minus.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="ll1.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
