文法bug修改 if add ) 输出语法树bug修改

--- a/Syntax-Analysis/Syntax-Analysis.vcxproj
+++ b/Syntax-Analysis/Syntax-Analysis.vcxproj
@@ -82,6 +82,8 @@
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
+      <StackReserveSize>16000000</StackReserveSize>
+      <StackCommitSize>16000000</StackCommitSize>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
