--- a/Syntax-Analysis/Syntax-Analysis.vcxproj
+++ b/Syntax-Analysis/Syntax-Analysis.vcxproj
@@ -82,8 +82,10 @@
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <StackReserveSize>16000000</StackReserveSize>
-      <StackCommitSize>16000000</StackCommitSize>
+      <StackReserveSize>
+      </StackReserveSize>
+      <StackCommitSize>
+      </StackCommitSize>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -132,7 +134,7 @@
     <ClInclude Include="syntax_c_minus.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ll1.cpp" />
+    <ClCompile Include="ll_1.cpp" />
     <ClCompile Include="recursive_descent.cpp" />
     <ClCompile Include="Syntax_Analysis.cpp" />
     <ClCompile Include="syntax_c_minus.cpp" />
